[package]
name = "rulti"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_enum = "0.2.0"
rdev = "0.5.2"
serde_json = "1.0.95"
strum_macros = "0.24"
tokio = { version = "1.26.0", features = ["full"] }
serde = { version = "1.0.158", features = ["derive"] }
powershell_script = "1.0.4"
regex = "1.7.3"
global-hotkey = "0.1.2"
livesplit-hotkey = "0.7.0"
hotkey = "0.3.1"
windows-hotkeys = "0.1.1"
[dependencies.windows]
version = "0.43"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",

    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",

]
