[package]
name = "rulti"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_enum = "0.2.0"
rdev = "0.5.2"
serde_json = "1.0.95"
strum_macros = "0.24"
tokio = { version = "1.26.0", features = ["full"] }
serde = { version = "1.0.158", features = ["derive"] }
powershell_script = "1.0.4"
regex = "1.7.3"
x11rb = {version = "0.11.1", features = ["all-extensions"]}

